Fixed navbar container in mobile view added some spacing on top allnotes

--- a/src/components/AllNotes/AllNotesFetch.module.css
+++ b/src/components/AllNotes/AllNotesFetch.module.css
@@ -75,7 +75,7 @@ li {
     align-items: center;
     display: flex;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 10vh;
 }
 
 .btn button {
